--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,8 @@ dependencies {
     testImplementation "junit:junit:4.12"
     testImplementation "org.mockito:mockito-core:3.2.4"
     testImplementation group: 'org.spigotmc', name: 'spigot', version: '1.15.1-R0.1-SNAPSHOT'
+    testImplementation "org.reflections:reflections:0.9.12"
+    testImplementation "com.google.truth:truth:1.0.1"
     annotationProcessor "com.google.auto.value:auto-value:1.7"
 }
 
