Equip in a loop instead of on event. Handle bad item removal

--- a/build.gradle
+++ b/build.gradle
@@ -20,10 +20,16 @@ repositories {
         name = 'sonatype'
         url = 'https://oss.sonatype.org/content/groups/public/'
     }
+
+    maven {
+        name = "papermc"
+        url = "https://papermc.io/repo/repository/maven-public/"
+    }
 }
 
 dependencies {
-    compileOnly group: 'org.spigotmc', name: 'spigot-api', version: '1.15-R0.1-SNAPSHOT'
+    compileOnly group: "com.destroystokyo.paper", name: 'paper-api', version: '1.15.1-R0.1-SNAPSHOT'
+//    compileOnly group: 'org.spigotmc', name: 'spigot-api', version: '1.15-R0.1-SNAPSHOT'
     compileOnly group: 'org.spigotmc', name: 'spigot', version: '1.15.1-R0.1-SNAPSHOT'
     implementation group: 'com.badlogicgames.ashley', name: 'ashley', version: '1.7.3'
     implementation "com.google.auto.value:auto-value-annotations:1.7"
