--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id 'com.github.johnrengelman.shadow'
+    id 'com.github.johnrengelman.shadow' version '5.2.0'
 }
 
 group = pluginGroup
@@ -55,12 +55,12 @@ task copyJar(type: Copy) {
     into '/home/derongan/servers/1.15.2/plugins'
 }
 
-task createPack(type: Zip) {
-    from './src/main/resources/pack'
-    into '/'
-    include '**/*'
-    archiveName 'geary-pack.zip'
-    destinationDir file('/home/derongan/.local/share/multimc/instances/1.15.2/.minecraft/resourcepacks/')
-}
+//task createPack(type: Zip) {
+//    from './src/main/resources/pack'
+//    into '/'
+//    include '**/*'
+//    archiveName 'geary-pack.zip'
+//    destinationDir file('/home/derongan/.local/share/multimc/instances/1.15.2/.minecraft/resourcepacks/')
+//}
 
 build.dependsOn copyJar
