Expose service for creating recipes and adding services (#5)

--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
 
 plugins {
     id 'java'
+    id 'maven-publish'
 }
 
 apply plugin: "com.github.johnrengelman.shadow"
@@ -18,6 +19,11 @@ ext.plugin_path = ''
 
 group = pluginGroup
 version = pluginVersion
+
+if(project.hasProperty("snapshot") && snapshot.toBoolean() != false) {
+    version += "-SNAPSHOT"
+}
+
 
 sourceCompatibility = '1.8'
 targetCompatibility = '1.8'
@@ -37,6 +43,24 @@ repositories {
     maven {
         name = "papermc"
         url = "https://papermc.io/repo/repository/maven-public/"
+    }
+}
+
+publishing {
+    repositories {
+        maven {
+            name = "GitHubPackages"
+            url = uri("https://maven.pkg.github.com/MineInAbyss/geary")
+            credentials {
+                username = project.findProperty("gpr.user") ?: System.getenv("GITHUB_ACTOR")
+                password = project.findProperty("gpr.key") ?: System.getenv("GITHUB_TOKEN")
+            }
+        }
+    }
+    publications {
+        shadow(MavenPublication) { publication ->
+            project.shadow.component(publication)
+        }
     }
 }
 
