--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,17 +12,8 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
-    # - name: Cache nms m2
-    #   id: cache-nms
-    #   uses: actions/cache@v1
-    #   with:
-    #     path: $HOME/.m2/repository
-    #     key: ${{ runner.os }}-nms-${{ hashFiles('**/pom.xml') }}
-    #     restore-keys: |
-    #       ${{ runner.os }}-nms-:  
     - run: cat $HOME/.m2/settings.xml
     - uses: derongan/nmsaction@v1
-      # if: steps.cache-nms.outputs.cache-hit != 'true'
       with:
         rev: 1.15.1
     - name: Install nms into m2
@@ -30,10 +21,9 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
-      run: ./gradlew build
+      run: ./gradlew shadowJar
     - name: Upload artifact
       uses: actions/upload-artifact@v1.0.0
       with:
         name: package
-        # Directory containing files to upload
         path: build/libs
