--- a/build.gradle
+++ b/build.gradle
@@ -17,10 +17,9 @@ apply plugin: "com.github.johnrengelman.shadow"
 group = pluginGroup
 version = pluginVersion
 
-if(project.hasProperty("snapshot") && snapshot.toBoolean() != false) {
-    version += "-SNAPSHOT"
+if (project.hasProperty("buildNo")) {
+    version += "-" + buildNo
 }
-
 
 sourceCompatibility = '1.8'
 targetCompatibility = '1.8'
