Increment build #s and update versioning to conform to semver

--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,7 @@ group = pluginGroup
 version = pluginVersion
 
 if (project.hasProperty("buildNo")) {
-    version += "-" + buildNo
+    version += "." + buildNo
 }
 
 sourceCompatibility = '1.8'
