Rename the root project (#9)

--- a/build.gradle
+++ b/build.gradle
@@ -54,8 +54,8 @@ publishing {
         }
     }
     publications {
-        shadow(MavenPublication) { publication ->
-            project.shadow.component(publication)
+        gpr(MavenPublication) {
+            from(components.java)
         }
     }
 }
