--- a/build.gradle
+++ b/build.gradle
@@ -61,8 +61,7 @@ publishing {
 }
 
 dependencies {
-    compileOnly group: "com.destroystokyo.paper", name: 'paper-api', version: '1.15.1-R0.1-SNAPSHOT'
-//    compileOnly group: 'org.spigotmc', name: 'spigot-api', version: '1.15-R0.1-SNAPSHOT'
+    compileOnly group: 'org.spigotmc', name: 'spigot-api', version: '1.15.1-R0.1-SNAPSHOT'
     compileOnly group: 'org.spigotmc', name: 'spigot', version: '1.15.1-R0.1-SNAPSHOT'
     implementation group: 'com.badlogicgames.ashley', name: 'ashley', version: '1.7.3'
     implementation "com.google.auto.value:auto-value-annotations:1.7"
@@ -91,11 +90,3 @@ if (project.hasProperty("plugin_path") && plugin_path) {
     }
     build.dependsOn copyJar
 }
-
-//task createPack(type: Zip) {
-//    from './src/main/resources/pack'
-//    into '/'
-//    include '**/*'
-//    archiveName 'geary-pack.zip'
-//    destinationDir file('/home/derongan/.local/share/multimc/instances/1.15.2/.minecraft/resourcepacks/')
-//}
